<resources>
    <string name="app_name" translatable="false">TaýypAll</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="sign_up">Register</string>
    <string name="log_in">Sign in</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="create">Create</string>
    <string name="message">Message</string>
    <string name="change_psw">Change Password</string>
    <string name="change_name">Change name</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="call">Call</string>
    <string name="online">Online</string>
    <string name="log_out">Logout</string>
    <string name="my_publish">My publications</string>
    <string name="type_msg">Type a message...</string>
    <string name="search">Search</string>
    <string name="price">The location or address that the finder can pick up</string>
    <string name="city">City</string>
    <string name="description">Description</string>
    <string name="feedback">Your feedback</string>
    <string name="news_for">News for you</string>
    <string name="create_pub">Create Publication</string>
    <string name="more_details">More details</string>
    <string name="pub_title">Name of the founded item</string>
    <string name="contact_det">Your contact details</string>
    <string name="phone">Phone</string>
    <string name="name_length">The name must be more than 2 characters</string>
    <string name="surname_length">The surname must be more than 2 characters</string>
    <string name="change_photo">Change Photo</string>
    <string name="change_surname">Change Surname</string>
    <string name="double_clk_to_exit">Click again, to close</string>
    <string name="forgot_psw">Forgot password?</string>
    <string name="login_with_sms">Login with SMS</string>
    <string name="type_login">Type login to receive SMS</string>
    <string name="create_account">Create account</string>
    <string name="reg_pls_to_start">Register to start</string>
    <string name="add_info_client">Add information about you</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="conf_psw">Confirm password</string>
    <string name="ive_account">I have account, </string>
    <string name="i_dont_account">I haven\'t account, </string>
    <string name="incorrect_number">Incorrect number</string>
    <string name="password_length">The minimum character is 6</string>
    <string name="num_psw_inc">Incorrect number or password</string>
    <string name="change_language">Change language</string>
    <string name="post_deleted">Post is deleted</string>
    <string name="incorrect_operator">Incorrect format of the mobile operator!</string>
    <string name="lan_change_title">Change Language...</string>
    <string name="slide_to_cancel">Slide to cancel</string>
    <string name="psw_doesnt_match">Passwords don\'t match</string>
    <string name="you_havent_post">You haven\'t any posts</string>
    <string name="change_image">Change image</string>
    <string name="name_name">Name</string>
    <string name="surname_name">Surname</string>
    <string name="empty"></string>
    <string name="support_project">Support the project</string>
    <string name="please_upload_image">Please upload the image</string>
    <string name="desc_lenght">The description is too small</string>
    <string name="put_all_lines">Fill in all the lines</string>
    <string name="almaty">Almaty</string>
    <string name="nursultan">Nur-Sultan</string>
    <string name="shymkent">Shymkent</string>
    <string name="turkistan">Turkistan</string>
    <string name="aktobe">Aktobe</string>
    <string name="atyrau">Atyrau</string>
    <string name="aktau">Aktau</string>
    <string name="oskemen">Oskemen</string>
    <string name="oral">Oral</string>
    <string name="kostanay">Kostanay</string>
    <string name="karagandy">Karagandy</string>
    <string name="pavlodar">Pavlodar</string>
    <string name="petropavl">Petropavl</string>
    <string name="semei">Semei</string>
    <string name="kyzylorda">Kyzylorda</string>
    <string name="no_connection">No internet connection</string>
    <string name="retry">Retry</string>
    <string name="searching_post">Search...</string>
    <string name="psw_simple">Password is very simple</string>
    <string name="uploading">Uploading...</string>
</resources>