<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_2"
        android:title="@string/home"
        android:color="@color/black"
        />




<!--    <item-->
<!--        android:id="@+id/nav_favorite"-->
<!--        android:icon="@drawable/ic_favorite"-->
<!--        android:title="@string/favorite"-->
<!--        android:color="@color/black"/>-->




    <item
        android:id="@+id/nav_create"
        android:icon="@drawable/ic_create"
        android:title="@string/create"
        android:color="@color/black"/>

    <item
        android:id="@+id/nav_message"
        android:icon="@drawable/ic_message"
        android:title="@string/message"
        android:color="@color/black"/>

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_profile_2"
        android:title="@string/profile"
        android:color="@color/black"/>

</menu>