<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/create_account"
        android:textColor="@color/black"
        android:fontFamily="@font/font_artifakt_bold"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_artifakt_bold"
        android:text="@string/reg_pls_to_start"
        android:textColor="@color/mainColor"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView66"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_info_client"
        android:textColor="@color/mainColor"
        android:fontFamily="@font/font_artifakt"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />


    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:background="@drawable/edit_round"
        android:hint="+7(   )   -  -  "
        android:inputType="phone"
        android:layout_marginTop="50dp"
        android:padding="10dp"
        android:textColorHint="@color/mainColor"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/textView66" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_round"
        android:hint="@string/name"
        android:fontFamily="@font/font_artifakt"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/mainColor"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        tools:layout_editor_absoluteX="100dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_round"
        android:hint="@string/city"
        android:backgroundTint="@color/mainColor"
        android:textColor="@color/black"
        android:textColorHint="@color/mainColor"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />


    <EditText
        android:id="@+id/editText5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_round"
        android:hint="@string/password"
        android:padding="10dp"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/mainColor"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        tools:ignore="DuplicateIds"
        tools:layout_editor_absoluteX="100dp" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_round"
        android:hint="@string/conf_psw"
        android:padding="10dp"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/mainColor"
        app:layout_constraintTop_toBottomOf="@+id/editText5"
        tools:ignore="DuplicateIds"
        tools:layout_editor_absoluteX="100dp" />


    <FrameLayout
        android:layout_marginTop="20dp"
        android:id="@+id/frame_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText6"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonBN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:textSize="24sp"
            android:fontFamily="@font/font_artifakt_bold"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/botton_round"
            android:hint="@string/sign_up"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText6"
            tools:ignore="MissingConstraints" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:visibility="gone"
            />


    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/frame_lay">

        <TextView
            android:id="@+id/textTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_artifakt_bold"
            android:text="@string/ive_account"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frame_lay" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/font_artifakt_bold"
            android:text="@string/log_in"
            android:textColor="@color/mainColor"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/textTV"
            app:layout_constraintTop_toBottomOf="@+id/frame_lay" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>