<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <include
        layout="@layout/toolbar_item"/>

    <LinearLayout
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <!--ImageView
            android:id="@+id/profile_photo"
            android:padding="10dp"
            android:src="@drawable/ic_profile"
            android:layout_gravity="center"
            android:layout_width="180dp"
            android:layout_height="180dp"
            /-->


        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:padding="10dp"
            android:id="@+id/profile_photo"
            android:layout_gravity="center"
            android:src="@drawable/ic_profile"
            app:civ_border_width="0dp"
            android:scaleType="centerCrop"
            app:civ_shadow="true"
            app:civ_shadow_color="@color/black"/>

        <TextView
            android:id="@+id/change_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_image"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:textColor="@color/mainColor"
            android:layout_margin="5dp"
            />

        <TextView
            android:id="@+id/changeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_surname"
            android:textSize="15sp"
            android:textColor="@color/mainColor"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"

            />

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/surname_name"
            android:textColor="@color/black"
            android:background="@drawable/edit_round"
            android:layout_margin="5dp"
            android:textColorHint="@color/mainColor"
            android:padding="10dp"
            />

        <TextView
            android:id="@+id/changeSurn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_name"
            android:textSize="15sp"
            android:textColor="@color/mainColor"
            android:layout_margin="5dp"

            />

        <EditText
            android:id="@+id/editSurn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:background="@drawable/edit_round"
            android:layout_margin="5dp"
            android:hint="@string/name"
            android:textColor="@color/black"
            android:textColorHint="@color/mainColor"
            android:padding="10dp"

            />





        <EditText
            android:visibility="gone"
            android:id="@+id/editBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:background="@drawable/edit_round"
            android:layout_margin="5dp"
            android:textColor="@color/black"
            android:textColorHint="@color/mainColor"
            android:padding="10dp"

            />


        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_margin="30dp"
            android:textSize="22sp"
            android:fontFamily="@font/font_artifakt_bold"
            android:background="@drawable/botton_round"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>