<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    tools:context=".view.home.create.CreateFragment"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar_item"
        android:id="@+id/first"
        android:fontFamily="@font/font_artifakt_bold"
        />
    <!-- TODO: Update blank fragment layout -->

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Create Fragment"
        android:textSize="40sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:padding="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/more_details"
                android:textSize="25sp"
                android:textColor="@color/mainColor"
                android:padding="5dp"/>

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="match_parent"
                android:layout_height="65sp"
                android:src="@android:drawable/ic_menu_add"
                android:background="@drawable/botton_round"
                app:srcCompat="?attr/actionModeCloseDrawable"
                />
            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pub_title"
                android:textSize="20sp"
                android:fontFamily="@font/font_artifakt"
                android:textColor="@color/mainColor"
                android:padding="10dp"
                 />

            <EditText
                android:id="@+id/zagalovok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="Например, Compressor"
                android:background="@drawable/edit_round"
                android:textColorHint="@android:color/darker_gray"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="20sp"
                android:fontFamily="@font/font_artifakt"
                android:textColor="@color/mainColor"
                android:layout_margin="10dp"
                />

            <EditText
                android:id="@+id/baga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:background="@drawable/edit_round"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/mainColor"
                android:textSize="20sp"
                android:fontFamily="@font/font_artifakt"
                android:layout_margin="10dp"/>

            <EditText
                android:id="@+id/opisanie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:hint="Подумайте, какие подробности вы хотели бы узнать из обьявления. И добавьте их в описание :)"
                android:textColorHint="@android:color/darker_gray"
                android:background="@drawable/edit_round"
                android:padding="10dp"
                android:layout_margin="5dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_det"
                android:textSize="25sp"
                android:textColor="@color/mainColor"
                android:padding="5dp"/>



            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textColor="@color/mainColor"
                android:textSize="20sp"
                android:fontFamily="@font/font_artifakt"
                android:layout_margin="10dp" />

            <EditText
                android:id="@+id/Phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:textColorHint="@color/mainColor"
                android:background="@drawable/edit_round"
                android:padding="10dp"
                android:layout_margin="5dp"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:textColor="@color/mainColor"
                android:textSize="20sp"
                android:fontFamily="@font/font_artifakt"
                android:layout_margin="10dp" />

            <EditText
                android:id="@+id/City"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:textColorHint="@color/mainColor"
                android:background="@drawable/edit_round"
                android:padding="10dp"
                android:layout_margin="5dp"
                android:textColor="@color/black"
                />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textSize="25sp"
                android:fontFamily="@font/font_artifakt_bold"
                android:src="@android:drawable/ic_menu_add"
                android:background="@drawable/botton_round"
                android:layout_margin="30dp"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
